WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178895
Web Automation: denying user permission for getUserMedia doesn't work
https://bugs.webkit.org/show_bug.cgi?id=178895
Summary
Web Automation: denying user permission for getUserMedia doesn't work
Blaze Burg
Reported
2017-10-26 16:46:31 PDT
The ordering of special cases is incorrect. Our hardcoded "allow mock devices and don't prompt for them" settings are short-circuiting the automation session's getUserMedia permission check.
Attachments
Proposed Fix
(3.35 KB, patch)
2017-10-26 16:50 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2017-10-26 16:46:42 PDT
rdar://problem/35210121
Blaze Burg
Comment 2
2017-10-26 16:50:35 PDT
Created
attachment 325079
[details]
Proposed Fix
youenn fablet
Comment 3
2017-10-26 16:53:25 PDT
LGTM. At some point, we might want to remove mockCaptureDevicesPromptEnabled since WebDriver is a better solution.
WebKit Commit Bot
Comment 4
2017-10-26 19:32:07 PDT
Comment on
attachment 325079
[details]
Proposed Fix Clearing flags on attachment: 325079 Committed
r224082
: <
https://trac.webkit.org/changeset/224082
>
WebKit Commit Bot
Comment 5
2017-10-26 19:32:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug